--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .tamagotchi {
-  margin-bottom: 20px;
+  margin-bottom: 20;
 }
 
 .metrics {
@@ -20,14 +20,13 @@ body {
 }
 
 button {
-  margin: 5px;
+  margin: 30px;
   padding: 10px 20px;
   background-color: #224ba4;
   color: white;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-family: fantasy;
+  font-family: fantasy
 }
 
 button:hover {
